add ultimate cages

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 .DS_Store
 Updater.jar
-hs_err_pid54271.log
-hs_err_pid55911.log
-hs_err_pid58135.log
-hs_err_pid61672.log
+*.log
 jre/
 mods/
 pokemon-wilds.jar
